--- a/src/Sass/LoginComponent.scss
+++ b/src/Sass/LoginComponent.scss
@@ -54,8 +54,12 @@ body {
   width: 300px;
 }
 
-.linkedinLogo {
-  width: 80px;
+.ten-logo {
+  height: 4.8rem;
+  width: 4.8rem;
+  border-radius: 50%;
+  margin-left: .3rem;
+  margin-top: .2rem;
 }
 
 .hr-text {
