--- a/src/components/common/Topbar/index.scss
+++ b/src/components/common/Topbar/index.scss
@@ -5,9 +5,11 @@
   display: flex;
   align-items: center;
 }
-.linkedin-logo {
-  width: 65px;
+.ten-logo {
+  width: 60px;
+  height: 60px;
   margin-left: 20px;
+  margin-top: 2px;
 }
 .react-icons {
   display: flex;
